--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -66,8 +66,8 @@
 </head>
 <body>
     <div class="home-container">
-        <img src="/images/logo.jpg" alt="CineScope Logo">
-        <h1>Welcome to CineScope</h1>
+        <img src="/images/logo.jpg" alt="MovieApp Logo">
+        <h1>Welcome to PopcornOpinions!</h1>
         <a href="/signup" class="signup-button">Sign Up</a>
         <a href="/login" class="login-button">Login</a>
     </div>
