Added review submission and display functionality

--- a/src/main/resources/templates/movies.mustache
+++ b/src/main/resources/templates/movies.mustache
@@ -34,6 +34,7 @@
                             <strong>Release Year:</strong> {{releaseYear}}<br>
                             {{#tvShow}}<span class="badge bg-secondary">TV Show</span>{{/tvShow}}
                         </p>
+                        <a href="/reviews/{{movieId}}" class="btn btn-outline-primary mt-2">Reviews & Ratings</a>
                     </div>
                 </div>
             </div>
