--- a/src/main/resources/templates/dashboard.mustache
+++ b/src/main/resources/templates/dashboard.mustache
@@ -73,7 +73,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/movies">Movies</a></li>
-                <li class="nav-item"><a class="nav-link" href="/reviews">Reviews/Ratings</a></li>
+                <li class="nav-item"><a class="nav-link" href="/user-reviews">Reviews/Ratings</a></li>
                 <li class="nav-item"><a class="nav-link" href="/user">User Info</a></li>
                 <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
             </ul>
@@ -106,7 +106,7 @@
                         <h5 class="card-title">Your Reviews</h5>
                         <p class="card-text">Check or add reviews & ratings.</p>
                     </div>
-                    <a href="/reviews" class="btn btn-primary mt-3">Go to Reviews</a>
+                    <a href="/user-reviews" class="btn btn-primary mt-3">Go to Reviews</a>
                 </div>
             </div>
         </div>
