--- a/src/main/resources/templates/movies.mustache
+++ b/src/main/resources/templates/movies.mustache
@@ -13,7 +13,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/movies">Movies</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/reviews">Reviews</a></li>
+                    <a class="nav-link" href="/user-reviews">Reviews/Ratings</a>
                     <li class="nav-item"><a class="nav-link" href="/user">User Info</a></li>
                     <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
                 </ul>
