--- a/src/main/resources/templates/dashboard.mustache
+++ b/src/main/resources/templates/dashboard.mustache
@@ -76,6 +76,7 @@
                 <li class="nav-item"><a class="nav-link" href="/user-reviews">Reviews/Ratings</a></li>
                 <li class="nav-item"><a class="nav-link" href="/user">User Info</a></li>
                 <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
+                <li class="nav-item"><a class="nav-link" href="/watchlist">Watchlist</a></li>
             </ul>
         </div>
     </div>
