Added the user info page.

--- a/src/main/resources/templates/dashboard.mustache
+++ b/src/main/resources/templates/dashboard.mustache
@@ -116,7 +116,7 @@
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div>
                         <h5 class="card-title">Add/Remove Movies</h5>
-                        <p class="card-text">Manage the collection.</p>
+                        <p class="card-text">Manage the collection. This should be watchlist? </p>
                     </div>
                     <a href="/add-remove" class="btn btn-primary mt-3">Manage Movies</a>
                 </div>
@@ -127,11 +127,22 @@
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div>
                         <h5 class="card-title">Friends</h5>
-                        <p class="card-text">See and connect with friends.</p>
+                        <p class="card-text">See and connect with friends. Still Have to Do</p>
                     </div>
                     <a href="/friends" class="btn btn-primary mt-3">View Friends</a>
                 </div>
             </div>
+        </div>
+        <div class="col-md-3 d-flex">
+            <div class="card text-center shadow-sm p-3 w-100">
+                <div class="card-body d-flex flex-column justify-content-between">
+                    <div>
+                        <h5 class="card-title">Your Info</h5>
+                        <p class="card-text">View your profile details and credentials.</p>
+                    </div>
+                    <a href="/user" class="btn btn-primary mt-3">View Profile</a>
+                </div>
+             </div>
         </div>
     </div>
 </div>
