--- a/src/main/resources/templates/dashboard.mustache
+++ b/src/main/resources/templates/dashboard.mustache
@@ -76,7 +76,7 @@
                 <li class="nav-item"><a class="nav-link" href="/user-reviews">Reviews/Ratings</a></li>
                 <li class="nav-item"><a class="nav-link" href="/watchlist">Watchlist</a></li>
                 <li class="nav-item"><a class="nav-link" href="/user">User Info</a></li>
-                <li class="nav-item"><a class="nav-link" href="/friends">Friends</a></li>
+                <li class="nav-item"><a class="nav-link" href="/users-list">Friends</a></li>
             </ul>
         </div>
     </div>
@@ -116,9 +116,9 @@
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div>
                         <h5 class="card-title">Add/Remove Movies</h5>
-                        <p class="card-text">Manage the collection. This should be watchlist? </p>
+                        <p class="card-text">Manage your movie watchlist collection.</p>
                     </div>
-                    <a href="/add-remove" class="btn btn-primary mt-3">Manage Movies</a>
+                    <a href="/watchlist" class="btn btn-primary mt-3">Manage Movies</a>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
                         <h5 class="card-title">Friends</h5>
                         <p class="card-text">See and connect with friends. Still Have to Do</p>
                     </div>
-                    <a href="/friends" class="btn btn-primary mt-3">View Friends</a>
+                    <a href="/users-list" class="btn btn-primary mt-3">View Friends</a>
                 </div>
             </div>
         </div>
