--- a/src/main/resources/templates/user_reviews.mustache
+++ b/src/main/resources/templates/user_reviews.mustache
@@ -16,12 +16,20 @@
                 <h5 class="card-title">Movie ID: {{movieId}} | Rating: {{rating}} / 10</h5>
                 <p class="card-text">{{comment}}</p>
                 <small class="text-light">Submitted on {{timestamp}}</small>
+                
+                <form action="/update-review-rating" method="post" class="mt-3">
+                    <input type="hidden" name="reviewId" value="{{id}}">
+                    <div class="input-group mb-3" style="max-width: 200px;">
+                        <input type="number" name="rating" class="form-control" placeholder="New Rating (1-10)" min="1" max="10" required>
+                        <button type="submit" class="btn btn-primary">Update Rating</button>
+                    </div>
+                </form>
             </div>
         </div>
         {{/userReviews}}
 
         {{^userReviews}}
-        <p>You haven’t submitted any reviews yet.</p>
+        <p>You haven't submitted any reviews yet.</p>
         {{/userReviews}}
 
         <a href="/dashboard" class="btn btn-outline-light mt-4">Back to Dashboard</a>
