--- a/src/main/resources/templates/dashboard.mustache
+++ b/src/main/resources/templates/dashboard.mustache
@@ -115,7 +115,7 @@
             <div class="card text-center shadow-sm p-3 w-100">
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div>
-                        <h5 class="card-title">Add/Remove Movies</h5>
+                        <h5 class="card-title">Movie Watchlist</h5>
                         <p class="card-text">Manage your movie watchlist collection.</p>
                     </div>
                     <a href="/watchlist" class="btn btn-primary mt-3">Manage Movies</a>
@@ -127,7 +127,7 @@
                 <div class="card-body d-flex flex-column justify-content-between">
                     <div>
                         <h5 class="card-title">Friends</h5>
-                        <p class="card-text">See and connect with friends. Still Have to Do</p>
+                        <p class="card-text">See and connect with friends.</p>
                     </div>
                     <a href="/users-list" class="btn btn-primary mt-3">View Friends</a>
                 </div>
